giskard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giskard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giskard
  template:
    metadata:
      labels:
        app: giskard
    spec:
      containers:
        - name: giskard
          image: giskardai/giskard:latest
          ports:
            - containerPort: 19000
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
