giskard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giskard
spec:
  selector:
    app: giskard
  ports:
    - protocol: TCP
      port: 19000
      targetPort: 19000
